Arranged Section 1.3 alphabetically

--- a/documentation/SystemDesign/Design.tex
+++ b/documentation/SystemDesign/Design.tex
@@ -91,20 +91,22 @@ In the ideal scenario, one subsystem will be the only one that is responsible fo
 \label{sec:definitions}
 The following terms and definitions will be used throughout this document:
 \begin{itemize}
-\item \textbf{System}: encompasses both the hardware and software parts of SmartServe
-\item \textbf{Shooting Mechanism}: refers to the part of the system that shoots the table tennis balls towards the user side (player)
-\item \textbf{Team}: all team members of the core capstone project, as noted in the list of Authors
-\item \textbf{User Side}: the side of the table where the user (player) is standing
-\item \textbf{System Side}: the side of the table where the electromechanical system is placed; it is the opposite side of the User Side
+% Alphabetical order is highly preferred as it eases user navigation
 \item \textbf{ACID}: a database transaction which is atomic, consistent, isolated and durable
 \item \textbf{FPS}: frames per second
 \item \textbf{GUI}: graphical user interface
-\item \textbf{Pitch}: rotation along the y-axis; this rotation angle primarily dictates the range of the ball from the net to the edge of the table on the user side
-\item \textbf{Yaw}: rotation along the z-axis; this rotation angle primarily dictates the panning functionality of the shooting mechanism from the right side to the left side of the table
-\item \textbf{Roll}: rotation along the x-axis
 \item \textbf{HTTP:} hypertext transfer protocol
+\item \textbf{Pitch}: rotation along the y-axis; this rotation angle primarily dictates the range of the ball from the net to the edge of the table on the user side
+\item \textbf{Roll}: rotation along the x-axis
+\item \textbf{Shooting Mechanism}: refers to the part of the system that shoots the table tennis balls towards the user side (player). Please refer to Figure \ref{fig:table-tennis-top-view} for visual illustration.
+\item \textbf{System Side}: the side of the table where the electromechanical system is placed; it is the opposite side of the User Side. Please refer to Figure \ref{fig:table-tennis-top-view} for visual illustration.
+\item \textbf{System}: encompasses both the hardware and software parts of SmartServe
 \item \textbf{TCP:} transmission control protocol
+\item \textbf{Team}: all team members of the core capstone project, as noted in the list of Authors
+\item \textbf{User Side}: the side of the table where the user (player) is standing
+\item \textbf{Yaw}: rotation along the z-axis; this rotation angle primarily dictates the panning functionality of the shooting mechanism from the right side to the left side of the table
 \end{itemize}
+
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.75\textwidth]{img/Table-Tennis-Top-View.png} %requires the graphicx package
