polished off sys design

--- a/documentation/Requirements/Requirements.tex
+++ b/documentation/Requirements/Requirements.tex
@@ -488,6 +488,16 @@ The shooting mechanism should not start, pause or end a session without the user
 	\noindent\textbf{History}: Created Oct. 27, 2017
 \end{framed}
 
+\begin{framed}
+	\noindent\textbf{Requirement ID}: P6 \\\\
+	\noindent\textbf{Description}: The \hyperref[sec:definitions]{system} will minimize the latency between the current shooting mechanism position and the next desired position \\
+	\textbf{Rationale}: This will reduce latency between shots and aid in engaging the user more during operation \\
+	\textbf{Fit Criterion}: The system picks the closest position for the shooting mechanism to satisfy a given shot relative to its current position \\\\
+	\textbf{Originator}: Chris McDonald \\\\
+	\textbf{Priority}: Medium \hfill \\
+	\noindent\textbf{History}: Created Dec. 13, 2017
+\end{framed}
+
 \subsection{Operational and Environmental Requirements}
 \begin{framed}
 	\noindent\textbf{Requirement ID}: OE1 \hfill\\\\
